# Finasta-AI

./: .env  .gitignore  app.py  pyproject.toml  requirements.txt
Finasta/: Agent.py  Config.py  Tools.py
