[project]
name = "finasta-ai"
version = "0.0.1"
description = "Private AI assistant for Advanced Financial Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uv",
    "edgartools >= 4.26.1",
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-google-genai>=3.0.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "streamlit>=1.51.0",
    "yfinance>=0.2.66",
    "ipykernel",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
    "watchdog>=6.0.0",
    "jupyterlab>=4.4.10",
    "ipywidgets>=8.1.8",   
]

[tool.pytest.ini_options]
pythonpath=[
    "."
]


